JT-89900 Access Eraser widget. Fix colors in the dark mode

--- a/packages/project-team-dashboard-widgets/widgets/revoke-user-access/app/app.css
+++ b/packages/project-team-dashboard-widgets/widgets/revoke-user-access/app/app.css
@@ -4,7 +4,8 @@
   margin: 0;
   padding: calc(unit * 2);
 
-  background: #fff;
+  color: var(--ring-text-color);
+  background: var(--ring-content-background-color);
 
   font-size: font-size;
 }
@@ -22,7 +23,7 @@
   bottom: 0;
   left: 0;
 
-  background-color: white;
+  background: var(--ring-content-background-color);
 }
 
 .userMultiTable {
@@ -55,7 +56,7 @@
 
   padding: 12px calc(2 * unit) unit calc(2 * unit);
 
-  background-color: white;
+  background: var(--ring-content-background-color);
 
   box-shadow: 0 6px 9px -9px borders-color;
 }
